--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -1,10 +1,7 @@
-@import "fonts";
-@import "variables";
-@import "styles";
-
 /* Bootstrap */
 @import "../scripts/vendor/bootstrap/less/bootstrap.less";
 
-body {
-	background-color: black;
-}
+/* Multikanban */
+@import "fonts";
+@import "variables";
+@import "styles";
