--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -1,3 +1,16 @@
 body {
 	background-color: white;
 }
+
+#menu-region{
+
+	background: none repeat scroll 0 0 #27ae60;
+    color: #fff;
+    font-weight: 200;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 240px;
+    z-index: 1030;
+}
