--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,6 +1,3 @@
-body {
-  background-color: white;
-}
 /* Bootstrap */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
@@ -6166,4 +6163,19 @@ button.close {
   .hidden-print {
     display: none !important;
   }
+}
+/* Multikanban */
+body {
+  background-color: white;
+}
+#menu-region {
+  background: none repeat scroll 0 0 #27ae60;
+  color: #fff;
+  font-weight: 200;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 240px;
+  z-index: 1030;
 }
