--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -3,7 +3,6 @@ body {
 }
 
 #menu-region{
-
 	background: none repeat scroll 0 0 #27ae60;
     color: #fff;
     font-weight: 200;
@@ -13,4 +12,13 @@ body {
     top: 0;
     width: 240px;
     z-index: 1030;
+}
+
+#footer{
+	bottom: 10px;
+    font-size: 12px;
+    padding: 0 20px;
+    position: absolute;
+    width: 100%;
+    z-index: -1;
 }
