--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -22,3 +22,12 @@ body {
     width: 100%;
     z-index: -1;
 }
+
+#main-region{
+	
+    height: 100%;
+    margin-left: 240px;
+    overflow: hidden;
+    position: relative;
+
+}
