--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6187,3 +6187,9 @@ body {
   width: 100%;
   z-index: -1;
 }
+#main-region {
+  height: 100%;
+  margin-left: 240px;
+  overflow: hidden;
+  position: relative;
+}
