kanban layout flex

--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -1,6 +1,9 @@
 /* Bootstrap */
 @import "../scripts/vendor/bootstrap/less/bootstrap.less";
 
+/* Normalize */
+@import (inline) "../scripts/vendor/normalize.css/normalize.css";
+
 /* Multikanban */
 @import "fonts";
 @import "variables";
