--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -17,6 +17,10 @@ body {
     }
 }
 
+html, body{
+	height: 100%;
+}
+
 #menu-region{
 	background: none repeat scroll 0 0 @green;
     color: #fff;
@@ -181,29 +185,167 @@ body {
 	
     height: 100%;
     margin-left: 240px;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
+
+    header{
+    	width: 100%;
+    	height: 80px;
+    	border-bottom: 1px solid @grey;
+
+    	h1{
+    		font-size: 31px;
+		    margin: 0;
+		    padding: 23px 0 23px 30px;
+    	}
+
+    	span{
+
+    	}
+
+    	a{
+
+    	}
+    }
+
+    .activity-item{
+
+    	padding: 15px;
+
+    	a{
+    		color: @green;
+    	}
+    }
 
     #kanban-header{
 
-    	width: 100%;
-    	height: 80px;
-    	float: left;
-    	background-color: red;
     	border-bottom: 1px solid @grey;
+
+    	header{
+    		display: inline-block;
+    		border-bottom: 0;
+    		width: auto;
+    	}
+
+    	span{
+	    	display: none;
+	    	font-size: 20px;
+
+	    	&:hover{
+	    		color: @green;
+	    		cursor: pointer;
+	    	}
+	    }
+
+	    &:hover span{
+	    	display: inline-block;
+	    }
+
+    	a{
+    		float: right;
+    		padding: 40px 20px 0 0;
+    		color: @green;
+    	}
+    }
+
+    > div{
+    	height: 100%;
     }
 
     #kanban-board{
-
+    	height: calc(100% - 80px);
+    	display: flex;
+    	flex-flow: column wrap;
 
     	.column{
     		float: left;
     		width: 20%;
     		border-left: 1px solid @grey;
+    		flex: 1 1 100%;
+    		
+    		a{ 
+    			color: #333;
+    		}
+
+    		.column-header{
+    			font-size: 20px;
+    			padding: 6px 0;
+    			line-height: 28px;
+    			position: relative;
+    			width: 100%;
+    			border-bottom: 1px solid @grey;
+
+    			span{
+    				font-size: 15px;
+    				color: #444;
+    				position: absolute;
+
+    				&:hover{
+    					color: @green;
+    					cursor: pointer;
+    				}
+
+    				&:first-child{
+    					top: 13px;
+    					left: 13px;
+    				}
+
+    				&:last-child{
+    					top: 13px;
+    					right: 13px;
+    				}
+    			}
+
+    			div{
+    				text-align: center;
+    			}
+    		}
+
+    		ul{
+    			list-style: none;
+
+    			li{
+	    			height: 80px;
+	    			border-bottom: 1px solid @grey;
+	    		}
+
+	    		li.newTask{
+	    			text-align: center;
+	    			font-size: 40px;
+	    			line-height: 80px;
+	    			color: @green;
+
+	    			&:hover{
+	    				cursor: pointer;
+	    				background-color: @green;
+	    				color: white;
+	    			}
+	    		}
+
+	    		div{
+	    			height: 40px;
+	    			line-height: 40px;
+	    		}
+
+	    		div:first-child{
+	    			border-bottom: 1px solid @grey;
+	    		}
+    		}
+    		
+    	}
+
+    	.column:first-child{
+    		border-left: 0px;
     	}
 
     	#doing{
-    		height: calc(50% - 40px);
+    		flex: 0 1 200px;
+    	}
+
+    	#onhold{
+    		border-top: 1px solid @grey;
+    		flex: 0 1 calc(100% - 201px);
     	}
     }
 }
