--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6834,8 +6834,18 @@ body {
 #main-region .activity-item a {
   color: #27ae60;
 }
+#main-region > div {
+  height: 100%;
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
 #main-region #kanban-header {
   border-bottom: 1px solid #dddddd;
+  display: table-caption;
+}
+#main-region #kanban-header > div {
+  width: 100%;
 }
 #main-region #kanban-header header {
   display: inline-block;
@@ -6858,19 +6868,16 @@ body {
   padding: 40px 20px 0 0;
   color: #27ae60;
 }
-#main-region > div {
-  height: 100%;
-}
 #main-region #kanban-board {
   height: calc(100% - 80px);
-  display: flex;
-  flex-flow: column wrap;
+  display: table-row;
 }
 #main-region #kanban-board .column {
-  float: left;
   width: 20%;
   border-left: 1px solid #dddddd;
-  flex: 1 1 100%;
+  display: table-cell;
+  height: 100%;
+  vertical-align: top;
 }
 #main-region #kanban-board .column a {
   color: #333;
@@ -6925,16 +6932,52 @@ body {
   height: 40px;
   line-height: 40px;
 }
-#main-region #kanban-board .column ul div:first-child {
+#main-region #kanban-board .column ul .task div:first-child {
   border-bottom: 1px solid #dddddd;
+}
+#main-region #kanban-board .column ul .task div:first-child a {
+  padding: 10px 15px 10px 0px;
+  border-right: 1px solid #dddddd;
+}
+#main-region #kanban-board .column ul .task:hover {
+  background-color: #eeeeee;
+  cursor: move;
+}
+#main-region #kanban-board .column ul .task:hover span {
+  display: inline-block;
+}
+#main-region #kanban-board .column ul .task span {
+  color: #333;
+  float: right;
+  padding: 12px;
+  border-left: 1px solid #dddddd;
+  display: none;
+}
+#main-region #kanban-board .column ul .task span:hover {
+  color: #27ae60;
+  cursor: pointer;
+}
+#main-region #kanban-board .column ul .task a {
+  margin-left: 10px;
 }
 #main-region #kanban-board .column:first-child {
   border-left: 0px;
 }
 #main-region #kanban-board #doing {
-  flex: 0 1 200px;
+  display: inline-block;
+  width: 100%;
+  height: 240px;
+}
+#main-region #kanban-board #doing ul {
+  overflow-y: scroll;
+  height: 200px;
 }
 #main-region #kanban-board #onhold {
+  display: inline-block;
+  width: 100%;
+  height: calc(100% - 240px);
+}
+#main-region #kanban-board #onhold .column-header {
   border-top: 1px solid #dddddd;
-  flex: 0 1 calc(100% - 201px);
+  padding: 6px 0 5px;
 }
