--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -341,10 +341,22 @@ html, body{
 
 	    			div:first-child{
 	    				border-bottom: 1px solid @grey;
+	    				line-height: 36px;
 
 	    				a{
-	    					padding: 10px 15px 10px 0px;
+	    					padding: 13px 9px 14px 0px;
 	    					border-right: 1px solid @grey;
+	    					font-size: 9px;
+	    				}
+	    			}
+
+	    			div:nth-child(2){
+	    				a{
+	    					font-family: "opensans-Regular";
+	    					display: block;
+						    overflow: hidden;
+						    text-overflow: ellipsis;
+						    white-space: nowrap;
 	    				}
 	    			}
 
@@ -371,7 +383,7 @@ html, body{
 	    			}
 
 	    			a{
-	    				margin-left: 10px;
+	    				margin-left: 5px;
 	    			}
 	    		}
     		}
