--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6740,7 +6740,7 @@ body {
   font-size: 16px;
   display: block;
   height: auto;
-  padding: 9px 20px;
+  padding: 9px 20px 8px;
   transition: background 0.2s ease 0s;
   width: 100%;
   position: relative;
