--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -87,7 +87,7 @@ html, body{
 			font-size: 16px;
 			display: block;
 		    height: auto;
-		    padding: 9px 20px;
+		    padding: 9px 20px 8px;
 		    transition: background 0.2s ease 0s;
 		    width: 100%;
 		    position: relative;
