--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6745,7 +6745,8 @@ body {
   width: 100%;
   position: relative;
 }
-#menu-region aside ul li a:hover {
+#menu-region aside ul li a:hover,
+#menu-region aside ul li a.light {
   background: none repeat scroll 0 0 #2bc36b;
 }
 #menu-region aside ul li a.selected {
@@ -6756,11 +6757,13 @@ body {
   font-size: 16px;
   position: absolute;
   top: 3px;
+  cursor: pointer;
 }
 #menu-region aside ul li a .glyphicon:hover {
   color: #259955;
 }
-#menu-region aside ul li a .glyphicon-pencil {
+#menu-region aside ul li a .glyphicon-pencil,
+#menu-region aside ul li a .glyphicon-floppy-disk {
   right: 40px;
 }
 #menu-region aside ul li a .glyphicon-remove {
