--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -144,7 +144,7 @@ html, body{
 		    }
 
 		    span{
-		    	margin: 9px 0 0 109px;
+		    	margin: 8px 0 0 109px;
 		    }
 		}
 
@@ -173,7 +173,7 @@ html, body{
             }
 
             .glyphicon{
-                margin-top: 9px;
+                margin-top: 8px;
 
                 &:hover{
                     cursor: pointer;
@@ -452,5 +452,26 @@ html, body{
     			padding: 6px 0 5px;
     		}
     	}
+    }
+}
+
+#modal-region{
+
+    .modal{
+        display: block;
+
+        .modal-content{
+            border-radius: 0px;
+        }
+
+        .btn{
+            border-radius: 0px;
+
+            &:hover{
+                background-color: @green;
+                border-color: #fff;
+                color: #fff;
+            }
+        }
     }
 }
