--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -321,6 +321,9 @@ html, body, #content, #layout{
     		height:100%;
     		vertical-align:top;
     		
+            >div{
+                height: 100%;
+            }
     		
     		a{ 
     			color: #333;
@@ -362,6 +365,7 @@ html, body, #content, #layout{
 
     		ul{
     			list-style: none;
+                height: 100%;
 
                 .inputTask{
                     height: 80px;
