--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6869,7 +6869,7 @@ body,
 }
 #main-region header h1 {
   font-size: 31px;
-  margin: 0;
+  margin: 0 25px 0 0;
   padding: 23px 0 23px 30px;
   outline: none;
 }
@@ -6948,7 +6948,7 @@ body,
   position: absolute;
 }
 #main-region #kanban-board .column .column-header span:hover {
-  color: #27ae60;
+  color: #259955;
   cursor: pointer;
 }
 #main-region #kanban-board .column .column-header span:first-child {
@@ -6958,6 +6958,21 @@ body,
 #main-region #kanban-board .column .column-header span:last-child {
   top: 13px;
   right: 13px;
+}
+#main-region #kanban-board .column .column-header span.customSort.selected,
+#main-region #kanban-board .column .column-header span.dateCompletedSort.selected,
+#main-region #kanban-board .column .column-header span.dateCreatedSort.selected,
+#main-region #kanban-board .column .column-header span.dateCompletedSortInverse.selected,
+#main-region #kanban-board .column .column-header span.dateCreatedSortInverse.selected {
+  color: #27ae60;
+}
+#main-region #kanban-board .column .column-header span.customSort.selected:hover,
+#main-region #kanban-board .column .column-header span.dateCompletedSort.selected:hover,
+#main-region #kanban-board .column .column-header span.dateCreatedSort.selected:hover,
+#main-region #kanban-board .column .column-header span.dateCompletedSortInverse.selected:hover,
+#main-region #kanban-board .column .column-header span.dateCreatedSortInverse.selected:hover {
+  color: #259955;
+  cursor: pointer;
 }
 #main-region #kanban-board .column .column-header div {
   text-align: center;
@@ -7055,21 +7070,21 @@ body,
 #main-region #kanban-board .column:first-child {
   border-left: 0px;
 }
-#main-region #kanban-board #doing {
+#main-region #kanban-board #doing-column {
   display: inline-block;
   width: 100%;
   height: 239px;
 }
-#main-region #kanban-board #doing ul {
+#main-region #kanban-board #doing-column ul {
   overflow-y: scroll;
   height: 200px;
 }
-#main-region #kanban-board #onhold {
+#main-region #kanban-board #onhold-column {
   display: inline-block;
   width: 100%;
   height: calc(100% - 200px);
 }
-#main-region #kanban-board #onhold .column-header {
+#main-region #kanban-board #onhold-column .column-header {
   border-top: 1px solid #dddddd;
   padding: 6px 0 5px;
 }
