--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -244,6 +244,21 @@ html, body, #content, #layout{
 		    margin: 0 25px 0 0;
 		    padding: 23px 0 23px 30px;
             outline: none;
+
+            a{
+                color: @darkgrey;
+
+
+                span{
+                    color: @green;
+                }
+
+                &:first-child{
+                    margin-left: 100px;
+                }
+            }
+
+
     	}   	
     }
 
