--- a/app/styles/fonts.less
+++ b/app/styles/fonts.less
@@ -96,4 +96,11 @@
     src: url(../fonts/open-sans/OpenSans-SemiboldItalic.ttf);
 }
 
+// ICOMOON
+@font-face {
+    font-family: icomoon;
+    src: url(../fonts/icomoon/icomoon.ttf);
+}
+
+
 
