--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -4,6 +4,9 @@
 /* Normalize */
 @import (inline) "../scripts/vendor/normalize.css/normalize.css";
 
+/* Icomoon */
+@import (inline) "icomoon.css";
+
 /* Multikanban */
 @import "fonts";
 @import "variables";
