--- a/app/styles/other.less
+++ b/app/styles/other.less
@@ -5,18 +5,18 @@
 }
 
 #landing{
-	width: 960px;
-	margin: 0 auto;
 	min-height: 100%;
+	font-family: 'ubuntu-L';
 
 	a{
-		color: #555;
+		color: #333;
 	}
 
 	#landing-header{
 		font-family: opensans-Semibold;
-		margin-top: 60px;
 		height: 30px;
+		width: 960px;
+		margin: 60px auto 0;
 
 		div{
 			float: right;
@@ -41,22 +41,240 @@
 	}
 
 	#landing-presentation{
-		
+		@media (max-width:1200px){ 
+			min-height: calc( 100vh - 90px );
+		}
+		width: 960px;
+		margin: 0 auto;
+
+		#brand{
+			font-family: 'ubuntu-R';
+
+			span{
+				color: @green;
+				font-size: 22px;
+			} 
+
+			a{
+				color: @green;
+				font-size: 30px;
+			}
+
+			p{
+				font-size: 14px;
+				margin-top: -6px;
+				font-family: 'ubuntu-L';
+			}
+		}
+
+		#slogan{
+			margin-top: 9vh;
+			margin-bottom: 12vh;
+
+			p.big{
+				font-size: 40px;
+				width: 100%;
+				font-family: 'ubuntu-R';
+			}
+
+			p{
+				font-size: 16px;
+				width: 460px;
+				font-family: 'ubuntu-L';
+			}
+
+		}
+
+		a{
+			margin: 0 auto 15vh;
+			width: 130px;
+		}
+
+		.button{
+			background: none repeat scroll 0 0 padding-box @green;
+		    border-radius: 3px;
+		    color: #fff;
+		    display: inline-block;
+		    font-family: 'ubuntu-R';
+		    font-weight: 700;
+		    padding: 1em 2.618em;
+		    text-transform: uppercase;
+
+		    &:hover{
+		    	color: @green;
+		    	background-color: #fff;
+		    	cursor: pointer;
+		    }
+		}
 	}
 
 	#landing-stats{
+		background-color: @green;
 		
+		ul{
+			width: 960px;
+			margin: 0 auto;
+			list-style: none;
+			padding: 20px 0;
+
+			li{
+				display: inline-block;
+				width: 30%;
+				text-align: center;
+				overflow: hidden;
+
+				&:nth-child(1), &:nth-child(2){
+					width: 20%;
+				}
+
+				a{
+					color: #fff;
+					display: inline-block;
+					
+
+					.number{
+						font-family: ubuntu-B;
+						font-size: 72px;
+						
+					}
+
+					.text{
+						text-transform: uppercase;
+
+					}
+				}
+			}
+		}
 	}
 
 	#landing-preview{
-		
+		width: 960px;
+		margin: 0 auto;
+		padding-bottom: 100px;
+		border-bottom: 1px solid @grey;
+
+		div{
+			width: 40%;
+			margin: 7% 5%;
+			float: left;
+		}
+
+		.quote{
+			font-size: 16px;
+			background: #f9f9f9;
+		    border-left: 10px solid #ccc;
+			padding: 0.5em 10px;
+
+			p{
+				float: right;
+				margin-bottom: 0;
+			}
+		}
+
+		a{
+			margin-bottom: 0;
+		}
+
+		a:before {
+		    color: #ccc;
+		    content: open-quote;
+		    font-size: 4em;
+		    line-height: 0.1em;
+		    margin-right: 0.25em;
+		    vertical-align: -0.4em;
+		}
+
+		a:after {
+		    color: #ccc;
+		    content: close-quote;
+		    font-size: 4em;
+		    line-height: 0.1em;
+		    margin-left: 0.25em;
+		    vertical-align: -0.4em;
+		}
+
+		img{
+			width: 100%
+		}
 	}
 
 	#landing-principles{
-		
+		width: 960px;
+		margin: 0 auto;
+		padding: 60px 0;
+		border-bottom: 1px solid @grey;
+		height: 100%;
+		overflow: auto;
+
+		div{
+			width: 50%;
+			float: left;
+			font-size: 16px;
+			padding-left: 30px;
+
+
+			ul{
+				list-style: none;
+
+				li{
+					margin: 10px 0;
+
+					span{
+						color: @green;
+						font-size: 25px;
+					}
+
+					a{
+						margin-left: 20px;
+					}
+				}
+			}
+		}
 	}
 
 	#landing-footer{
-		
+		width: 960px;
+		margin: 0 auto;
+		padding: 30px 0;
+
+		div{
+			display: inline;
+
+			span, a{
+				color: @green;
+
+				&:hover{
+					text-decoration: underline;
+					cursor: pointer;
+				}
+			}
+		}
+	
+		ul{
+			float: right;
+			list-style: none;
+
+			li{
+				display: inline-block;
+
+				a{
+
+					&:hover{
+						color: @green;
+						cursor: pointer;
+					}
+				}
+
+				&:after{
+					content: "|";
+					padding: 0 20px;
+					color: @grey;
+				}
+
+				&:last-child:after{
+					content: none;
+				}
+			}
+		}	
 	}
 }
