--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6593,6 +6593,81 @@ th {
   padding: 0;
 }
 
+/* Icomoon */
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon/icomoon.eot');
+	src:url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon/icomoon.woff') format('woff'),
+		url('../fonts/icomoon/icomoon.ttf') format('truetype'),
+		url('../fonts/icomoon/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-droplet:before {
+	content: "\e90b";
+}
+
+.icon-copy:before {
+	content: "\e92c";
+}
+
+.icon-map:before {
+	content: "\e94b";
+}
+
+.icon-map2:before {
+	content: "\e94c";
+}
+
+.icon-hour-glass:before {
+	content: "\e979";
+}
+
+.icon-pie-chart:before {
+	content: "\e99a";
+}
+
+.icon-list-numbered:before {
+	content: "\e9b9";
+}
+
+.icon-menu3:before {
+	content: "\e9bf";
+}
+
+.icon-menu4:before {
+	content: "\e9c0";
+}
+
+.icon-eye:before {
+	content: "\e9ce";
+}
+
+.icon-checkmark:before {
+	content: "\ea10";
+}
+
+.icon-table:before {
+	content: "\ea70";
+}
+
+
 /* Multikanban */
 @font-face {
   font-family: ubuntu-B;
@@ -6669,10 +6744,6 @@ th {
 @font-face {
   font-family: opensans-SemiboldItalic;
   src: url(../fonts/open-sans/OpenSans-SemiboldItalic.ttf);
-}
-@font-face {
-  font-family: icomoon;
-  src: url(../fonts/icomoon/icomoon.ttf);
 }
 body {
   background-color: white;
@@ -7137,17 +7208,17 @@ body,
   height: 100%;
 }
 #landing {
-  width: 960px;
-  margin: 0 auto;
   min-height: 100%;
+  font-family: 'ubuntu-L';
 }
 #landing a {
-  color: #555;
+  color: #333;
 }
 #landing #landing-header {
   font-family: opensans-Semibold;
-  margin-top: 60px;
   height: 30px;
+  width: 960px;
+  margin: 60px auto 0;
 }
 #landing #landing-header div {
   float: right;
@@ -7165,4 +7236,198 @@ body,
 #landing #landing-header .underline {
   border-bottom: 4px solid #27ae60;
   padding-bottom: 4px;
+}
+#landing #landing-presentation {
+  width: 960px;
+  margin: 0 auto;
+}
+@media (max-width: 1200px) {
+  #landing #landing-presentation {
+    min-height: calc(100vh - 90px);
+  }
+}
+#landing #landing-presentation #brand {
+  font-family: 'ubuntu-R';
+}
+#landing #landing-presentation #brand span {
+  color: #27ae60;
+  font-size: 22px;
+}
+#landing #landing-presentation #brand a {
+  color: #27ae60;
+  font-size: 30px;
+}
+#landing #landing-presentation #brand p {
+  font-size: 14px;
+  margin-top: -6px;
+  font-family: 'ubuntu-L';
+}
+#landing #landing-presentation #slogan {
+  margin-top: 9vh;
+  margin-bottom: 12vh;
+}
+#landing #landing-presentation #slogan p.big {
+  font-size: 40px;
+  width: 100%;
+  font-family: 'ubuntu-R';
+}
+#landing #landing-presentation #slogan p {
+  font-size: 16px;
+  width: 460px;
+  font-family: 'ubuntu-L';
+}
+#landing #landing-presentation a {
+  margin: 0 auto 15vh;
+  width: 130px;
+}
+#landing #landing-presentation .button {
+  background: none repeat scroll 0 0 padding-box #27ae60;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-family: 'ubuntu-R';
+  font-weight: 700;
+  padding: 1em 2.618em;
+  text-transform: uppercase;
+}
+#landing #landing-presentation .button:hover {
+  color: #27ae60;
+  background-color: #fff;
+  cursor: pointer;
+}
+#landing #landing-stats {
+  background-color: #27ae60;
+}
+#landing #landing-stats ul {
+  width: 960px;
+  margin: 0 auto;
+  list-style: none;
+  padding: 20px 0;
+}
+#landing #landing-stats ul li {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+  overflow: hidden;
+}
+#landing #landing-stats ul li:nth-child(1),
+#landing #landing-stats ul li:nth-child(2) {
+  width: 20%;
+}
+#landing #landing-stats ul li a {
+  color: #fff;
+  display: inline-block;
+}
+#landing #landing-stats ul li a .number {
+  font-family: ubuntu-B;
+  font-size: 72px;
+}
+#landing #landing-stats ul li a .text {
+  text-transform: uppercase;
+}
+#landing #landing-preview {
+  width: 960px;
+  margin: 0 auto;
+  padding-bottom: 100px;
+  border-bottom: 1px solid #dddddd;
+}
+#landing #landing-preview div {
+  width: 40%;
+  margin: 7% 5%;
+  float: left;
+}
+#landing #landing-preview .quote {
+  font-size: 16px;
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  padding: 0.5em 10px;
+}
+#landing #landing-preview .quote p {
+  float: right;
+  margin-bottom: 0;
+}
+#landing #landing-preview a {
+  margin-bottom: 0;
+}
+#landing #landing-preview a:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+#landing #landing-preview a:after {
+  color: #ccc;
+  content: close-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-left: 0.25em;
+  vertical-align: -0.4em;
+}
+#landing #landing-preview img {
+  width: 100%;
+}
+#landing #landing-principles {
+  width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
+  border-bottom: 1px solid #dddddd;
+  height: 100%;
+  overflow: auto;
+}
+#landing #landing-principles div {
+  width: 50%;
+  float: left;
+  font-size: 16px;
+  padding-left: 30px;
+}
+#landing #landing-principles div ul {
+  list-style: none;
+}
+#landing #landing-principles div ul li {
+  margin: 10px 0;
+}
+#landing #landing-principles div ul li span {
+  color: #27ae60;
+  font-size: 25px;
+}
+#landing #landing-principles div ul li a {
+  margin-left: 20px;
+}
+#landing #landing-footer {
+  width: 960px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+#landing #landing-footer div {
+  display: inline;
+}
+#landing #landing-footer div span,
+#landing #landing-footer div a {
+  color: #27ae60;
+}
+#landing #landing-footer div span:hover,
+#landing #landing-footer div a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+#landing #landing-footer ul {
+  float: right;
+  list-style: none;
+}
+#landing #landing-footer ul li {
+  display: inline-block;
+}
+#landing #landing-footer ul li a:hover {
+  color: #27ae60;
+  cursor: pointer;
+}
+#landing #landing-footer ul li:after {
+  content: "|";
+  padding: 0 20px;
+  color: #dddddd;
+}
+#landing #landing-footer ul li:last-child:after {
+  content: none;
 }
